Implement note querying